# DNS_Name_Resolution

./: .gitignore  README.md
PA3/: Makefile  README.md  ideas.md  multi-lookup.c  multi-lookup.h  performance.csv  performance.py  util.c
rust-dns-name-resolution/: .gitignore  Cargo.toml  build.rs
rust-dns-name-resolution/src/: main.rs
