[package]
name = "multi-lookup"
version = "0.1.0"
authors = ["ZackJorquera <jorquerazack@gmail.com>"]
build = "build.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.68"

[build-dependencies]
cc = "1.0"

[profile.dev]
opt-level = 3
